--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
 
 <section id="about">
   <h2>About Me</h2>
-  <p class="about-para" id="para1">I’m currently in my third year ... fundamentals in computer science and programming.</p>
-  <p class="about-para" id="para2">I have a deep interest in software development, web technologies, and solving complex problems... solutions.</p>
-  <p class="about-para" id="para3">When I experience burnout, I channel it into learning something new...confidence and clarity.</p>
+  <p class="about-para" id="para1">
+  I’m currently in my third year of Bachelor of Technology in Information Technology at Velammal College of Engineering and Technology, Madurai. Over the course of my academic journey, I’ve developed strong fundamentals in computer science and programming.
+</p>
+
+<p class="about-para" id="para2">
+  I have a deep interest in software development, web technologies, and solving complex problems. My aim is to become a skilled IT professional who can contribute to impactful projects and innovative solutions.
+</p>
+
+<p class="about-para" id="para3">
+  When I experience burnout, I channel it into learning something new—an approach that consistently elevates me to the next level. Every new concept I explore helps me grow and climb higher with confidence and clarity.
+</p>
+
 </section>
 
 <section id="skills">
