--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <section id="education">
   <h2>Education</h2>
   <div class="edu-flow">
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal College of Engineering and Technology</h3><p>B.Tech IT (3rd Year)</p></div></div>
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR Matric HR Sec School</h3><p>High School Diploma</p></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3><p>B.Tech IT (3rd Year)</p></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3><p>Higher Secondary </p></div></div>
   </div>
 </section>
 
