--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
     <textarea placeholder="Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
-  <div class="social">
-    <a href="https://github.com/sachinroyal-m" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/sachin-royal/" target="_blank">LinkedIn</a>
-  </div>
+ <div class="social">
+  <a href="https://github.com/sachinroyal-m" target="_blank">GitHub</a>
+  <a href="https://www.linkedin.com/in/sachin-royal-939379273" target="_blank">LinkedIn</a>
+</div>
+
 </section>
 
 <script src="js/main.js"></script>
