--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </form>
  <div class="social">
   <a href="https://github.com/sachinroyal-m" target="_blank">GitHub</a>
-  <a href="https://www.linkedin.com/in/sachin-royal-939379273/" target="_blank">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/sachinroyal/" target="_blank">LinkedIn</a>
 </div>
 
 </section>
