--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
 </head>
 <body>
 
-<nav><ul>
-  <li><a href="#hero">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#skills">Skills</a></li>
-  <li><a href="#education">Education</a></li>
-  <li><a href="#contact">Contact</a></li>
-</ul></nav>
+<!-- Navigation -->
+<nav>
+  <ul>
+    <li><a href="#hero">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
+<!-- Hero Section -->
 <section id="hero">
   <div class="hero-content">
     <img src="images/sachin.jpg" alt="Sachin Royal">
     <h1>Hi, I'm <span>Sachin Royal M</span></h1>
     <p class="rotating-text">
-      <span>Software Developer</span><span>Designer</span><span>Digital Marketer</span>
+      <span>Software Developer</span>
+      <span>Designer</span>
+      <span>Digital Marketer</span>
     </p>
   </div>
 </section>
 
+<!-- About Section -->
 <section id="about">
   <h2>About Me</h2>
   <p class="about-para" id="about-full">
@@ -34,8 +42,7 @@
   </p>
 </section>
 
-</section>
-
+<!-- Skills Section -->
 <section id="skills">
   <h2>My Skills</h2>
   <div class="skills-grid">
@@ -45,6 +52,7 @@
   </div>
 </section>
 
+<!-- Education Section -->
 <section id="education">
   <h2>Education</h2>
   <div class="edu-flow">
@@ -53,6 +61,7 @@
   </div>
 </section>
 
+<!-- Contact Section -->
 <section id="contact">
   <h2>Get in Touch</h2>
   <form>
@@ -61,11 +70,10 @@
     <textarea placeholder="Message" required></textarea>
     <button type="submit">Send Message</button>
   </form>
- <div class="social">
-  <a href="https://github.com/sachinroyal-m" target="_blank">GitHub</a>
-  <a href="https://www.linkedin.com/in/sachinroyal/" target="_blank">LinkedIn</a>
-</div>
-
+  <div class="social">
+    <a href="https://github.com/sachinroyal-m" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/sachinroyal/" target="_blank">LinkedIn</a>
+  </div>
 </section>
 
 <script src="js/main.js"></script>
