--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <section id="education">
   <h2>Education</h2>
   <div class="edu-flow">
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3><p>B.Tech IT (3rd Year)</p></div></div>
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3><p>Higher Secondary </p></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3><p1>B.Tech IT (3rd Year)</p1><p2>2023-2027</p2></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3><p1>Higher Secondary </p1><p12>2018-2022</p2></div></div>
   </div>
 </section>
 
