--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
   </div>
 </section>
 
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="project-list">
+    <div class="project-card">
+      <h3>Portfolio (WEB DEVELOPMENT)</h3>
+      <p>A personal portfolio website built with HTML, CSS, and JavaScript to showcase my skills and achievements.</p>
+    </div>
+    <div class="project-card">
+      <h3>STOCK PREDICTION USING-AIML</h3>
+      <p>A machine learning project that predicts stock prices using historical data, linear regression, and AI models.</p>
+    </div>
+  </div>
+</section>
+
+
 <!-- Contact Section -->
 <section id="contact">
   <h2>Get in Touch</h2>
