--- a/index.html
+++ b/index.html
@@ -62,15 +62,19 @@
 </section>
 
 <section id="projects">
-  <h2>My Projects</h2>
-  <div class="project-list">
-    <div class="project-card">
+  <h2 class="section-title">My Projects</h2>
+  <div class="project-grid">
+    <div class="project-card fade-in">
       <h3>Portfolio (WEB DEVELOPMENT)</h3>
-      <p>A personal portfolio website built with HTML, CSS, and JavaScript to showcase my skills and achievements.</p>
+      <p>
+        A personal portfolio website built with HTML, CSS, and JavaScript to showcase my skills and achievements.
+      </p>
     </div>
-    <div class="project-card">
+    <div class="project-card fade-in" style="animation-delay: 0.3s;">
       <h3>STOCK PREDICTION USING-AIML</h3>
-      <p>A machine learning project that predicts stock prices using historical data, linear regression, and AI models.</p>
+      <p>
+        A machine learning project that predicts stock prices using historical data, linear regression, and AI models.
+      </p>
     </div>
   </div>
 </section>
