--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-<!-- Navigation -->
 <nav>
   <ul>
     <li><a href="#hero">Home</a></li>
@@ -21,7 +20,6 @@
   </ul>
 </nav>
 
-<!-- Hero Section -->
 <section id="hero">
   <div class="hero-content">
     <img src="images/sachin.jpg" alt="Sachin Royal">
@@ -34,7 +32,6 @@
   </div>
 </section>
 
-<!-- About Section -->
 <section id="about">
   <h2>About Me</h2>
   <p class="about-para" id="about-full">
@@ -42,7 +39,6 @@
   </p>
 </section>
 
-<!-- Skills Section -->
 <section id="skills">
   <h2>My Skills</h2>
   <div class="skills-grid">
@@ -52,12 +48,11 @@
   </div>
 </section>
 
-<!-- Education Section -->
 <section id="education">
   <h2>Education</h2>
   <div class="edu-flow">
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3><p1>B.Tech IT (3rd Year)</p1><p2>2023-2027</p2></div></div>
-    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3><p1>Higher Secondary </p1><p12>2018-2022</p2></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3><p>B.Tech IT (3rd Year)</p></div></div>
+    <div class="edu-item"><div class="edu-point"></div><div class="edu-content"><h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3><p>Higher Secondary </p></div></div>
   </div>
 </section>
 
@@ -65,21 +60,16 @@
   <h2 class="section-title">My Projects</h2>
   <div class="project-grid">
     <div class="project-card fade-in">
-      <div class="icon-floating">💼</div>
       <h3>Portfolio (WEB DEVELOPMENT)</h3>
       <p>A personal portfolio website built with HTML, CSS, and JavaScript to showcase my skills and achievements.</p>
     </div>
     <div class="project-card fade-in" style="animation-delay: 0.3s;">
-      <div class="icon-floating">📈</div>
       <h3>STOCK PREDICTION USING‑AIML</h3>
       <p>A machine learning project that predicts stock prices using historical data, linear regression, and AI models.</p>
     </div>
   </div>
 </section>
 
-
-
-<!-- Contact Section -->
 <section id="contact">
   <h2>Get in Touch</h2>
   <form>
@@ -94,6 +84,6 @@
   </div>
 </section>
 
-<script src="js/main.js"></script>
+<script src="js/main.js" defer></script>
 </body>
 </html>
