--- a/index.html
+++ b/index.html
@@ -11,80 +11,88 @@
 
 <nav>
   <ul>
-    <li><a href="#hero">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#hero" class="reveal">Home</a></li>
+    <li><a href="#about" class="reveal">About</a></li>
+    <li><a href="#education" class="reveal">Education</a></li>
+    <li><a href="#skills" class="reveal">Skills</a></li>
+    <li><a href="#projects" class="reveal">Projects</a></li>
+    <li><a href="#contact" class="reveal">Contact</a></li>
   </ul>
 </nav>
 
-<section id="hero">
+<section id="hero" class="reveal">
   <div class="hero-content">
     <img src="images/sachin.jpg" alt="Sachin Royal" loading="lazy">
     <h1>Hi, I'm <span>Sachin Royal M</span></h1>
-    <p class="rotating-text">
-      <span>Software Developer</span>
-      <span>Designer</span>
-      <span>Digital Marketer</span>
+    <p class="typewriter">
+      Software Developer | Designer | Digital Marketer
     </p>
   </div>
 </section>
 
-<section id="about">
+<section id="about" class="reveal">
   <h2>About Me</h2>
-  <p class="about-para" id="about-full">
-    I’m currently in my third year of Bachelor of Technology in Information Technology at Velammal College of Engineering and Technology, Madurai. Over the course of my academic journey, I’ve developed strong fundamentals in computer science and programming. I have a deep interest in software development, web technologies, and solving complex problems. My aim is to become a skilled IT professional who can contribute to impactful projects and innovative solutions. When I experience burnout, I channel it into learning something new—an approach that consistently elevates me to the next level. Every new concept I explore helps me grow and climb higher with confidence and clarity.
-  </p>
+  <p>I’m currently in my third year...</p>
 </section>
 
-<section id="skills">
-  <h2>My Skills</h2>
-  <div class="skills-grid">
-    <div class="skill-card"><div class="skill-icon">💻</div><h3>Programming</h3><p>C, Java, Python</p></div>
-    <div class="skill-card"><div class="skill-icon">🌐</div><h3>Web Development</h3><p>HTML, CSS, JavaScript</p></div>
-    <div class="skill-card"><div class="skill-icon">🗄️</div><h3>Database</h3><p>SQL</p></div>
-  </div>
-</section>
-
-<section id="education">
+<section id="education" class="reveal">
   <h2>Education</h2>
   <div class="edu-flow">
     <div class="edu-item">
-      <div class="edu-point"></div>
-      <div class="edu-content">
+      <div class="edu-point">🎓</div>
+      <div class="edu-content animated-text">
         <h3>Velammal COLLEGE OF ENGINEERING AND TECHNOLOGY</h3>
-        <p class="edu-highlight-gold animate-text">B.Tech IT (3rd Year)</p>
-        <p class="edu-highlight-red animate-text">2023–2027</p>
+        <p class="gold-text">B.Tech IT (3rd Year)</p>
+        <p class="red-text">2023–2027</p>
       </div>
     </div>
     <div class="edu-item">
-      <div class="edu-point"></div>
-      <div class="edu-content">
+      <div class="edu-point">🎓</div>
+      <div class="edu-content animated-text" style="animation-delay:0.2s">
         <h3>AKNU S SUNDAR MATRIC HR SEC SCHOOL</h3>
-        <p class="edu-highlight-gold animate-text">Higher Secondary</p>
-        <p class="edu-highlight-red animate-text">2018–2022</p>
+        <p class="gold-text">Higher Secondary</p>
+        <p class="red-text">2018–2022</p>
       </div>
     </div>
   </div>
 </section>
 
-<section id="projects">
-  <h2 class="section-title">My Projects</h2>
-  <div class="project-grid">
-    <div class="project-card fade-in">
-      <h3>Portfolio (WEB DEVELOPMENT)</h3>
-      <p>A personal portfolio website built with HTML, CSS, and JavaScript to showcase my skills and achievements.</p>
+<section id="skills" class="reveal">
+  <h2>My Skills</h2>
+  <div class="skills-grid">
+    <div class="skill-card">
+      <div class="skill-icon">💻</div>
+      <h3>Programming</h3>
+      <div class="skill-bar"><div class="fill" style="width:90%"></div></div>
     </div>
-    <div class="project-card fade-in" style="animation-delay: 0.3s;">
-      <h3>STOCK PREDICTION USING‑AIML</h3>
-      <p>A machine learning project that predicts stock prices using historical data, linear regression, and AI models.</p>
+    <div class="skill-card">
+      <div class="skill-icon">🌐</div>
+      <h3>Web Dev</h3>
+      <div class="skill-bar"><div class="fill" style="width:85%"></div></div>
+    </div>
+    <div class="skill-card">
+      <div class="skill-icon">🗄️</div>
+      <h3>Database</h3>
+      <div class="skill-bar"><div class="fill" style="width:75%"></div></div>
     </div>
   </div>
 </section>
 
-<section id="contact">
+<section id="projects" class="reveal">
+  <h2>My Projects</h2>
+  <div class="project-grid">
+    <div class="project-card">
+      <h3>Portfolio (WEB DEVELOPMENT)</h3>
+      <p>A personal portfolio website...</p>
+    </div>
+    <div class="project-card">
+      <h3>STOCK PREDICTION USING‑AIML</h3>
+      <p>A machine learning project...</p>
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="reveal">
   <h2>Get in Touch</h2>
   <form>
     <input type="text" placeholder="Name" required>
@@ -100,17 +108,16 @@
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-    const items = document.querySelectorAll('.animate-text');
+    const reveals = document.querySelectorAll('.reveal');
     const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('in-view');
-          observer.unobserve(entry.target);
+      entries.forEach(e=>{
+        if(e.isIntersecting) {
+          e.target.classList.add('active');
+          observer.unobserve(e.target);
         }
       });
-    }, { threshold: 0.3 });
-
-    items.forEach(item => observer.observe(item));
+    },{threshold:0.2});
+    reveals.forEach(r=>observer.observe(r));
   });
 </script>
 
